tests/errors/alfa/semantic_error7.alfa
//****Error semantico en lin X: Bucle con condicion de tipo int.
main
{
    int x, y ;
    boolean a,b; 

    x=1;
    x=2;
    a=true;
    a=false;

    while ((x+3)) {
        y=0;
    }      
}    